Test with actions in route and controller

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,9 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<header>
+  Header of the application
+</header>
 
-{{outlet}}
+<div {{action "clickMe"}}>CLICK ME</div>
+
+<article>This is the article content</article>
+
+<footer>And there goes the footer</footer>
