Block controller action.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,7 @@
   Header of the application
 </header>
 
-<div {{action "clickMe"}}>CLICK ME</div>
+<div {{action "clickMe"}}>CLICK ME !</div>
 
 <article>This is the article content</article>
 
